[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Actors/enemy1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy_Dead.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Muffled_Explosion_NenadSimic.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Particles/Enemy_Dead_secondary_particle.tres" type="Material" id=4]
[ext_resource path="res://Scenes/Particles/Enemy_Dead_primary_particle.tres" type="Material" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 34.9016

[node name="Enemy_Dead" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.180392, 0.054902, 0.054902, 1 )
rotation = 1.5708
scale = Vector2( 0.11, 0.11 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 96
one_shot = true
explosiveness = 0.62
local_coords = false
process_material = ExtResource( 5 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
amount = 64
one_shot = true
explosiveness = 0.62
local_coords = false
process_material = ExtResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 6.058
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
